--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,24 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		
+		<!-- 测试 -->
+		<dependency>
+		    <groupId>org.springframework</groupId>
+		    <artifactId>spring-test</artifactId>
+		    <version>5.0.9.RELEASE</version>
+		</dependency>
+		<dependency>
+		    <groupId>junit</groupId>
+		    <artifactId>junit</artifactId>
+		    <version>4.12</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-test</artifactId>
+		    <version>1.5.2.RELEASE</version>
+		    <scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
