--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,12 @@
 			</exclusions>
 		</dependency>
 		
+		<dependency>
+			<groupId>org.mybatis.spring.boot</groupId>
+			<artifactId>mybatis-spring-boot-starter</artifactId>
+			<version>2.0.1</version>
+		</dependency>
+		
 		<!-- 测试 -->
 		<dependency>
 		    <groupId>org.springframework</groupId>
@@ -55,12 +61,6 @@
 		    <groupId>junit</groupId>
 		    <artifactId>junit</artifactId>
 		    <version>4.12</version>
-		</dependency>
-		<dependency>
-		    <groupId>org.springframework.boot</groupId>
-		    <artifactId>spring-boot-test</artifactId>
-		    <version>1.5.2.RELEASE</version>
-		    <scope>test</scope>
 		</dependency>
 	</dependencies>
 
