--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,13 @@
 		    <artifactId>junit</artifactId>
 		    <version>4.12</version>
 		</dependency>
+		
+		<!-- json -->
+		<dependency>
+			<groupId>com.alibaba</groupId>
+	        <artifactId>fastjson</artifactId>
+	        <version>1.2.35</version>
+		</dependency>
 	</dependencies>
 
 	<build>
